--- a/WhereAmI?!/app/src/main/AndroidManifest.xml
+++ b/WhereAmI?!/app/src/main/AndroidManifest.xml
@@ -31,11 +31,7 @@
             android:parentActivityName="com.example.whereami.MainActivity"
             android:label="@string/view_settings_title">
         </activity>
-        <activity
-            android:name="com.example.whereami.SenseActivity"
-            android:parentActivityName="com.example.whereami.MainActivity"
-            android:label="@string/view_sense_title">
-        </activity>
+        <receiver android:name="com.example.whereami.WifiReceiver"></receiver>
     </application>
 
 </manifest>
